# protoc-gen-seaorm

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  buf.gen.yaml  buf.yaml  build.rs
.beads/: issues.jsonl
.github/workflows/: ci.yml
examples/database/: .gitignore  Cargo.toml  buf.gen.yaml
examples/database/proto/: example.proto
examples/database/proto/seaorm/: options.proto
examples/database/src/: lib.rs  main.rs  storage.rs
examples/database/src/entity/example/: prelude.rs
examples/database/tests/: db_tests.rs
proto/seaorm/: options.proto
src/: generator.rs  lib.rs  main.rs  options.rs  types.rs
src/codegen/: column.rs  domain.rs  entity.rs  enum_gen.rs  mod.rs  oneof.rs  relation.rs  service.rs
tests/: integration.rs
tests/fixtures/: bidirectional.proto  example.proto  m2m.proto  selfref.proto  service.proto  simple.proto  user.proto
