[package]
name = "protoc-gen-seaorm"
version = "0.1.0"
edition = "2021"
description = "A protoc plugin that generates SeaORM 2.0 entity models from protobuf definitions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scrogson/protoc-gen-seaorm"
keywords = ["protobuf", "seaorm", "codegen", "protoc"]
categories = ["development-tools", "database"]

[[bin]]
name = "protoc-gen-seaorm"
path = "src/main.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
heck = "0.5"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
prettyplease = "0.2"
thiserror = "2.0"

[build-dependencies]
prost-build = "0.13"
