[package]
name = "protoc-gen-seaorm"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Sonny Scroggin <sonny@scrogson.com>"]
description = "A protoc plugin that generates SeaORM 2.0 entity models from protobuf definitions"
documentation = "https://github.com/scrogson/protoc-gen-seaorm#readme"
homepage = "https://github.com/scrogson/protoc-gen-seaorm"
repository = "https://github.com/scrogson/protoc-gen-seaorm"
readme = "README.md"
license = "MIT"
keywords = ["protobuf", "seaorm", "codegen", "protoc", "orm"]
categories = ["development-tools", "database"]
exclude = [
    ".github/",
    ".beads/",
    "examples/",
    "gen/",
    "tests/fixtures/",
]

[[bin]]
name = "protoc-gen-seaorm"
path = "src/main.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"
heck = "0.5"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
prettyplease = "0.2"
thiserror = "2.0"
once_cell = "1.20"

[build-dependencies]
prost-build = "0.13"
