[package]
name = "seaorm-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "2.0.0-rc.21", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "schema-sync",
    "entity-registry",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Required for generated storage traits
thiserror = "1.0"
async-trait = "0.1"
# Required for generated domain types with validation
garde = { version = "0.21", features = ["derive", "email", "url"] }

[dev-dependencies]
tokio-test = "0.4"
